# rl-hyperheuristic-tsp

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  efficiency_stop.yaml  macro_actions.yaml
experiments/: analyze_results.py  check_tsplib.py  evaluate_bc_on_full_tsplib.py  evaluate_bc_on_tsplib_subinstances.py  evaluate_q_learning.py  plot_comparison.py  plot_training.py  run_baselines.py  run_comparison.py  run_comparison_v2.py  run_external_baselines_tsplib.py  run_random_hh.py  run_time_budgeted_ils.py  run_tsplib_comparison_v2.py  run_tsplib_comparison_v3.py  smoke_test_operators.py  statistical_tests.py  train_behavior_cloning_exact.py  train_behavior_cloning_heuristic_teacher.py  train_maskable_ppo_exact_multi.py  train_maskable_ppo_exact_small.py  train_maskable_ppo_path_toy.py  train_operator_selector_bc.py  train_operator_selector_ppo.py  train_q_learning.py  train_q_learning_v2.py  train_q_learning_v2_tsplib_curriculum.py  train_q_learning_v3_teacher.py
notes/: operator_selector_ppo_progress.md
rl_hyperheuristic_tsp.egg-info/: PKG-INFO  SOURCES.txt
scripts/: compare_dqn_variants.py  diagnose_macro_actions.py  evaluate.py  plot_comparison.py  plot_generalization.py  plot_training.py  run_benchmark.py  run_generalization_benchmark.py  run_tsplib_benchmark.py  smoke_test_env.py  smoke_test_macro_operators.py  smoke_test_operators.py  smoke_test_tsp.py  smoke_test_tsplib.py  train.py
tests/: test_bounded_heuristics.py  test_exact_tsp.py  test_heuristics.py  test_heuristics_v3.py  test_hyper_env.py  test_tour.py  (+8 more)
(+72 files in other folders)
