[project]
name = "tsp-hh"
version = "0.1.0"
description = "Adaptive reinforcement learning hyper-heuristic for the Traveling Salesman Problem"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "tqdm",
    "scipy"
]

[tool.pytest.ini_options]
pythonpath = ["src"]